version/0.13/_sources/api/solver/_autosummary/settings/lennard_jones_length.rst.txt
:orphan:

.. _lennard_jones_length:

lennard_jones_length
====================

.. autoclass:: ansys.fluent.core.solver.settings_231.lennard_jones_length.lennard_jones_length

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

